--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -1,15 +1,15 @@
 <!-- Footer -->
-<footer class="bg-rose-300 text-white py-16">
+<footer class="bg-rose-500 text-white py-16">
 	<div class="max-w-7xl mx-auto px-6">
 		<div class="text-center space-y-8">
 			<h3 class="text-4xl font-bold">
 				<span class="pink-underline">أوال فيمينا</span>
 			</h3>
 			<p class="text-xl max-w-3xl mx-auto">
-				مجلة نسائية ثقافية شهرية تعنى بالإبداع النسائي وتسليط الضوء على
-
+				مجلة نسائية ثقافية شهرية تعنى بالإبداع النسائي
+				<br><br>
 				{{ 'now'|date('Y') }}
-				أوال فيمينا. جميع الحقوق محفوظة.</p>
+				أوال فيمينا. جميع الحقوق محفوظة</p>
 		</div>
 	</div>
 </div></footer>
