--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -10,6 +10,7 @@
 				<a href="#who" class="hover:text-rose-500 transition">من نحن؟</a>
 				<a href="#archive" class="hover:text-rose-500 transition">أرشيف أوال فيمينا</a>
 				<a href="#current" class="hover:text-rose-500 transition">العدد الحالي</a>
+				<a href="{{ path('home') }}" class="hover:text-rose-500 transition">الرئيسية</a>
 			</div>
 
 			<!-- Admin Dropdown -->
