--- a/templates/home/hero-section.html.twig
+++ b/templates/home/hero-section.html.twig
@@ -1,20 +1,19 @@
 <!-- Hero Section -->
-<section
-class="hero-section bg-gray-50 py-10 md:py-20 "
->
-<div class="max-w-7xl mx-auto px-4 sm:px-6 py-26  relative ">
-      <img src="{{ asset('build/images/home/hero.svg') }}" alt="Home" class="w-[60%] hidden md:block h-full object-contain hero-image absolute top-0 right-0 ">
+<section class="hero-section bg-gray-50 py-10 md:py-20 ">
+	<div class="max-w-7xl mx-auto px-4 sm:px-6 py-26  relative ">
+		<img src="{{ asset('build/images/home/hero.svg') }}" alt="Home" class="w-[60%] hidden md:block h-full object-contain hero-image absolute top-0 right-0 ">
 
-     <div class="max-w-xl" >
-        <h1 class="text-5xl font-bold text-gray-900 mb-6">
-            {{ 'heroSection.title'|trans }}
-          <span class="text-primary-600">{{ 'heroSection.subTitle'|trans }} </span>
-        </h1>
-        <p class="text-lg text-gray-600 mb-8 leading-relaxed ">
-            {{ 'heroSection.description'|trans|raw }}
-        </p>
-     </div>
+		<div class="max-w-xl">
+			<h1 class="text-5xl font-bold text-gray-900 mb-6">
+				{{ 'heroSection.title'|trans }}
+				<span class="text-primary-600">{{ 'heroSection.subTitle'|trans }}
+				</span>
+			</h1>
+			<p class="text-lg text-gray-600 mb-8 leading-relaxed ">
+				{{ 'heroSection.description'|trans|raw }}
+			</p>
+		</div>
 
 
-</div>
-</section> 
+	</div>
+</section>
