--- a/templates/home/sections/archive.html.twig
+++ b/templates/home/sections/archive.html.twig
@@ -11,8 +11,8 @@
 		<div
 			class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 			<!-- Issue Card -->
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					10
 				</div>
 				<div class="text-center">
@@ -27,8 +27,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					11
 				</div>
 				<div class="text-center">
@@ -43,8 +43,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					12
 				</div>
 				<div class="text-center">
@@ -59,8 +59,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					7
 				</div>
 				<div class="text-center">
@@ -75,8 +75,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					8
 				</div>
 				<div class="text-center">
@@ -91,8 +91,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					9
 				</div>
 				<div class="text-center">
@@ -107,8 +107,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					4
 				</div>
 				<div class="text-center">
@@ -123,8 +123,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					5
 				</div>
 				<div class="text-center">
@@ -139,8 +139,8 @@
 				</div>
 			</div>
 
-			<div class="bg-white rounded-2xl shadow-custom-lg p-8 hover:shadow-xl transition relative">
-				<div class="absolute -top-4 -right-4 bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
+			<div class="bg-white rounded-2xl border border-[#FFE4E6] shadow-[0px_4px_6px_-4px_rgba(0,0,0,0.1),0px_10px_15px_-3px_rgba(0,0,0,0.1)] shadow-custom-lg p-8 hover:shadow-xl transition relative">
+				<div class="absolute top-4 left-4  bg-rose-500 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold text-xl">
 					6
 				</div>
 				<div class="text-center">
