--- a/templates/common/footer.actions.html.twig
+++ b/templates/common/footer.actions.html.twig
@@ -1,8 +1,8 @@
 {# paramètres :
     - class : la classe css à sur le container
-    - title : le titre de l'article ou du terme à partager
+    - title : le titre de l'article à partager
     - url : l'url de la page à partager
-    - status : le statut de l'article ou du terme (pour vérifier s'il est publié)
+    - status : le statut de l'article (pour vérifier s'il est publié)
 #}
 {% set twitter="" %}
 {% set facebook="" %}
