--- a/templates/home/sections/numero.html.twig
+++ b/templates/home/sections/numero.html.twig
@@ -11,7 +11,7 @@
 			<div class="space-y-8">
 				<a href="{{ path('app_opinion_show_front', {'id': opinion.id}) }}" class="text-right flex-1 block group">
 					<div class="rounded-3xl overflow-hidden shadow-custom-lg">
-						<img src="{{ asset('uploads/' ~ opinion.image.name) }}" alt="Woman reading" class="w-full h-96 object-cover"/>
+						<img src="{{ asset('uploads/' ~ opinion.image.name) }}" alt="Woman reading" class="w-full h-96 object-cover object-top"/>
 					</div>
 				</a>
 				<div class="rounded-3xl overflow-hidden shadow-custom-lg">
